Minor fixes to alignment on help and map

--- a/scss/help.scss
+++ b/scss/help.scss
@@ -1,3 +1,7 @@
 em{
 	font-size: 17px;
 }
+
+#back-button {
+  margin-bottom: 30px;
+}
